Completed ListMessages logic.
